# backend/docs/swagger.yaml
@@ -61,7 +61,7 @@ definitions:
     type: object
   diet.FoodRequest:
     properties:
-      exercise_id:
+      food_id:
         type: integer
       image_url:
         type: string
@@ -126,6 +126,13 @@ definitions:
   helper.ErrorResponse:
     properties:
       code:
+        type: string
+      message:
+        type: string
+    type: object
+  home.ResponseSearch:
+    properties:
+      data:
         type: string
       message:
         type: string
@@ -793,6 +800,42 @@ paths:
       summary: Get meals
       tags:
       - Diet
+  /search:
+    get:
+      consumes:
+      - application/json
+      description: Get info from gpts
+      parameters:
+      - description: search
+        in: query
+        name: search
+        required: true
+        type: string
+      - description: Access token
+        in: header
+        name: x-access-token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/home.ResponseSearch'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Search
+      tags:
+      - Home
   /task:
     put:
       consumes:
